--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,9 @@ language: python
 install:
 	pip install .
 	pip install -r requirements.txt
+services:
+	- mongodb
+	- sleep 15
+
+
 script: py.test
