--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: python
+branches: 
+  only:
+    - develop
+    - master
 
 install:
-	pip install .
+
 	pip install -r requirements.txt
+	pip install -r dev-requirements.txt
+python:
+  - "2.7"
+
 services:
 	- mongodb
 	- sleep 15
