changed config to enable thread and lock

--- a/viewpanel/conf/config.ini
+++ b/viewpanel/conf/config.ini
@@ -7,5 +7,7 @@ wsgi-file = /srv/servicedeskaid/server.py
 #socket = /home/victor/Projects/lavender/uwsgi/test.socket
 socket = 127.0.0.1:3031
 workers = 3
+enable-threads = true
+thunder-lock = true
 uid = nginx
 gid = nginx
