--- a/viewpanel/conf/config.ini
+++ b/viewpanel/conf/config.ini
@@ -1,10 +1,8 @@
 [uwsgi]
 master = true
 chmod-socket = 666
-chdir = /srv/servicedeskaid
-#wsgi-file = /home/victor/Projects/lavender/adapter.py
-wsgi-file = /srv/servicedeskaid/server.py
-#socket = /home/victor/Projects/lavender/uwsgi/test.socket
+chdir = /opt/servicedeskaid
+wsgi-file = /opt/servicedeskaid/server.py
 socket = 127.0.0.1:3031
 workers = 3
 enable-threads = true
