updated config and systemd service

--- a/viewpanel/conf/config.ini
+++ b/viewpanel/conf/config.ini
@@ -3,9 +3,12 @@ master = true
 chmod-socket = 666
 chdir = /opt/servicedeskaid
 wsgi-file = /opt/servicedeskaid/server.py
-socket = 127.0.0.1:3031
+socket = 127.0.0.1:8031
 workers = 3
 enable-threads = true
 thunder-lock = true
 uid = nginx
 gid = nginx
+threaded-logger = true
+logger = mylogger mongodblog:127.0.0.1:27017, deskdb.servicedeskaid_log
+log-to = /tmp/serv.log 
