--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ Flask-OpenID==1.2.1
 Flask-Script==2.0.5
 Flask-WTF==0.10.0
 flask-mongoengine==0.7.1
+mongoengine
 uWSGI==2.0.7
---allow-external PIL
---allow-unverified PIL
-PIL
+pillow
 -e .
