--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
 	"center",
 	"operations"
     ],
-    
     "dependencies": {
 	"express": "4.11",
 	"mongoose": "3.8",
 	"colors": "1.0",
-	"handlebars": "2.0",
+	"swig": "*",
 	"consolidate": "0.10",
 	"serve-favicon": "2.2",
 	"compression": "1.3",
 	"reload": "0.1",
 	"morgan": "1.5"
     },
-    
+    "scripts": {
+	"start": "NODE_PATH=./config:./controllers:./models PORT=3030 node server.js"
+    },
     "author": "Victor Palade",
     "license": "BSD",
     "bugs": {
