--- a/package.json
+++ b/package.json
@@ -24,15 +24,21 @@
 	"express": "4.11",
 	"mongoose": "3.8",
 	"colors": "1.0",
-	"swig": "*",
 	"consolidate": "0.10",
 	"serve-favicon": "2.2",
+	"bower": "~1.3",
 	"compression": "1.3",
-	"reload": "0.1",
 	"morgan": "1.5"
     },
+    "devDependencies": {
+	"reload": "0.1",
+	"should": "~2.1",
+	"mocha": "~2.1",
+	"supertest": "~0.15"
+    },
     "scripts": {
-	"start": "NODE_PATH=./config:./controllers:./models PORT=3030 node server.js"
+	"start": "NODE_PATH=./config:./controllers:./models PORT=3030 node server.js",
+	"test": "echo \"Not implemented yet\""
     },
     "author": "Victor Palade",
     "license": "BSD",
