--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "bootstrap": "~3.3.2",
     "ember": "~1.10.0",
     "ember-data": "~0.0.14",
-    "FlipClock": "~0.7.7"
+    "FlipClock": "~0.7.7",
+    "d3": "~3.5.5"
   }
 }
