--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,6 @@ Flask-Login==0.2.11
 Flask-OpenID==1.2.1
 Flask-Script==2.0.5
 Flask-WTF==0.10.0
-flask-mongoengine==0.7.1
-mongoengine
+SqlAlchemy=0.9.9
 uWSGI==2.0.7
-pillow
 -e .
