--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ Flask-Login==0.2.11
 Flask-OpenID==1.2.1
 Flask-Script==2.0.5
 Flask-WTF==0.10.0
-SqlAlchemy=0.9.9
+SQLAlchemy==0.9.9
 uWSGI==2.0.7
--e .
