--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
 Flask==0.10.1
 Flask-Login==0.2.11
+Flask-Migrate==1.3.1
 Flask-OpenID==1.2.1
+Flask-SQLAlchemy==2.0
 Flask-Script==2.0.5
 Flask-WTF==0.10.0
+Jinja2==2.7.3
+Mako==1.0.1
+MarkupSafe==0.23
 SQLAlchemy==0.9.9
-uWSGI==2.0.7
+WTForms==2.0.2
+Werkzeug==0.10.4
+alembic==0.7.5.post2
+click==4.0
+defusedxml==0.4.1
+itsdangerous==0.24
 psycopg2==2.6
--e .
+py==1.4.26
+pytest==2.7.0
+python3-openid==3.0.5
+uWSGI==2.0.7
