--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ branches:
 
 install:
     - pip install -r requirements.txt
+    - npm install -g bower
     - bower install --allow-root
 
 services:
