test config for postgres user, engine_factory and modified app factory

--- a/instance/settings.cfg
+++ b/instance/settings.cfg
@@ -1,1 +1,3 @@
-DATABASE_URI = 'postgres://deskuser:123123@127.0.0.1:5432'
+SQLALCHEMY_DATABASE_URI = 'postgres://deskuser:123123@127.0.0.1:5432'
+SQLALCHEMY_USER = 'deskuser'
+SQLALCHEMY_PASSWORD = '123123'
