--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,20 @@ python:
   - "3.4"
 
 branches: 
-    - develop
-    - master
-    - api-prototype
+  - develop
+  - master
+  - api-prototype
 
 install:
-    - pip install -r requirements.txt
-    - npm install -g bower
-    - bower install --allow-root
+  - pip install -r requirements.txt
+  - npm install -g bower
+  - bower install --allow-root
 
 services:
-    - postgres: "9.3"
-    - sleep 15
+  - postgres: "9.3"
+  - sleep 15
 
+before_script:
+  - psql -c 'create database deskdb;' -U postgres
+  
 script: py.test
