--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ services:
 
 before_script:
   - psql -c 'create database deskdb;' -U postgres
-  - psql -c 'CREATE USER deskuser password 123123' -U postgres -d deskdb
+  - psql -c "CREATE USER deskuser password '123123'" -U postgres -d deskdb
   
 script: py.test
