--- a/bower.json
+++ b/bower.json
@@ -25,10 +25,9 @@
   "dependencies": {
     "jquery": "~2.1.3",
     "handlebars": "^1.0",
-    "bootstrap": "~3.3.2",
     "ember": "^1.0",
-    "ember-data": "~0.0.14",
     "FlipClock": "~0.7.7",
-    "d3": "~3.5.5"
+    "d3": "~3.5.5",
+    "materialize": "~0.96.1"
   }
 }
