--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
-language: python
+language: nodejs
 
-python:
-  - "3.4"
+nodejs:
+  - "0.10"
 
 branches: 
   - develop
   - master
-  - api-prototype
 
 install:
-  - pip install -r requirements.txt
+  - npm install
   - npm install -g bower
   - bower install --allow-root
 
@@ -21,4 +20,4 @@ before_script:
   - psql -c 'create database deskdb;' -U postgres
   - psql -c "CREATE USER deskuser password '123123'" -U postgres -d deskdb
   
-script: py.test
+script: npm test
